Update title formatting for news article

--- a/_news/2023-news1.md
+++ b/_news/2023-news1.md
@@ -1,5 +1,5 @@
 ---
-title: "2023 Summer Argonne Student Symposium (SASSy) *Presentation: Statistical Model of Crystallographic Disorder*"
+title: "2023 Summer Argonne Student Symposium (SASSy) <strong>Presentation: Statistical Model of Crystallographic Disorder</strong>"
 
 date: 2023-07-26 08:15:00 -0500
 ---
