_news/2022-lorem.md _news/2023-news2.md _news/2024-news2.md _news/2024-news3.md deprecated/2023-news2.md

--- a/_news/2024-news2.md
+++ b/_news/2024-news2.md
@@ -1,4 +1,4 @@
 ---
-title: "The Triangle Computational and Applied Mathematics Symposium (TriCAMS) <strong>Poster: Coupling Structural and Functional Brain Connectome</strong>"
+title: "The Triangle Computational and Applied Mathematics Symposium (TriCAMS) <strong>Lightning Talk + Poster: Coupling Structural and Functional Brain Connectome</strong>"
 date: 2023-11-10 17:30:00 UTC
 ---
