--- a/_publications/2025/2025.md
+++ b/_publications/2025/2025.md
@@ -13,7 +13,7 @@ abstract: >-
   To address this limitation, we introduce dQP, a modular and solver-agnostic framework for plug-and-play differentiation of virtually any QP solver. A key insight we leverage to achieve modularity is that, once the active set of inequality constraints is known, both the solution and its derivative can be expressed using simplified linear systems that share the same matrix. This formulation fully decouples the computation of the QP solution from its differentiation. 
   Building on this result, we provide a minimal-overhead, open-source implementation that seamlessly integrates with over 15 state-of-the-art solvers. Comprehensive benchmark experiments demonstrate dQP’s robustness and scalability, particularly highlighting its advantages in large-scale sparse problems.
 
-cover:          /assets/images/covers/dQP.jpg
+cover:          /assets/images/covers/dQP.png
 authors:
   - Connor W. Magoon*
   - Fengyu Yang*
